# loxt

./: .clang-tidy  CMakeLists.txt  ll.c  ll.h
.github/workflows/: linux_build.yml
docs/: CMakeLists.txt
driver/: CMakeLists.txt  loxt.cpp
include/loxt/: lexer.hpp  lib.hpp  token_kinds.def
src/: CMakeLists.txt  lexer.cpp  lib.cpp
test/: CMakeLists.txt  test.cpp
